[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loglens"
version = "0.1.0"
description = "Self-hosted web app that OCR-extracts trucking trip-log PDFs and exports per-sheet summaries and CSV."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "LogLens" }]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pymupdf>=1.24",
    "pillow>=10.0",
    "rapidfuzz>=3.9",
    "pydantic>=2.7",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
loglens = "loglens.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/loglens"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
